--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #Disable batch job's auto start 
+spring.batch.initialize-schema=always
 spring.batch.job.enabled=false
 spring.main.banner-mode=off
- 
+
 #batch input files location
 input.dir=c:/temp/input
 
